# keypebble

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  example-config.yaml  pyproject.toml
docs/: architecture.md  index.md  token-profile.md
examples/: config.dev.yaml  config.ksa.yaml  config.yaml  example-config.yaml  policy.yaml  policy.yaml.example
examples/docker-compose/: README.md  config.local.yaml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.yaml  docker-registry.conf  keypebble.yaml  local_setup.sh  nginx.conf  nginx.local.conf  nginx.yaml  registry.yaml  service.conf
src/keypebble/: __init__.py  app.py  cli.py  config.py  core.py  main.py
src/keypebble/core/: __init__.py  claims.py  command.py  policy.py  token.py
src/keypebble/service/: app.py
tests/: conftest.py  test_claims.py  test_claims_builder.py  test_cli.py  test_command_token.py  test_issue.py  test_ksa_token.py  test_policy.py  test_scopes.py  test_service.py  test_token_decode.py  test_v2_token.py
